<resources>
    <string name="app_name">GroupApp</string>
    <string name="emptyString">""</string>
    <string name="placeholder">placeholder</string>
    <string name="error_no_internet">Error: Internet is not available!</string>

    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_key">email_key</string>
    <string name="password_key">password_key</string>

    <string name="message_created">Account Created!</string>
    <string name="message_incorrect_pass_or_user">Email or password is incorrect!</string>
    <string name="message_email_wrong_format">The email address is badly formatted!</string>
    <string name="message_confirmation_match_error">Confirmation does not match!</string>
    <string name="message_pass_empty">Password is empty!</string>
    <string name="message_conf_empty">Confirmation is empty!</string>
    <string name="message_weak_password">Password should be at least 6 characters!</string>
    <string name="message_email_already_exists">Email already exists!</string>
    <string name="message_email_empty">Email is empty!</string>
    <string name="message_logged_in">Logged in!</string>
    <string name="message_error">ERROR</string>

    <string name="toast_user_created">User created!</string>

    <string name="menu_news">News</string>
    <string name="menu_groups">Group</string>
    <string name="menu_user">Subscriptions</string>
    <string name="menu_settings">Settings</string>

    <string name="log_out">Log Out</string>

    <string name="settings_save_btn_text">Save</string>
    <string name="settings_name_text">Name</string>
    <string name="settings_birth_text">Birth Date</string>
    <string name="settings_gender_text">Gender</string>

    <string name="loremipsum">Lorem ipsum dolor sit amet, ex alii commodo virtute sit. Iudico aliquando efficiendi ad ius, vix te illum corpora commune. Usu brute velit delectus ne. Sale idque accusata cu pro, case error necessitatibus his in, te vel diceret invenire tractatos. Veri ponderum accusamus vix at, vix essent similique sententiae cu.</string>
    <string name="description_text">Description</string>
    <string name="empty_news_list_text">There are no news in this group!</string>
    <string name="empty_general_news_list_text">There are no general news!</string>
    <string name="empty_groups_list_text">There are no groups!</string>
    <string name="subscribe_text">Subscribe</string>
    <string name="unsubscribe_text">Unsubscribe</string>
</resources>
